--- a/index.html
+++ b/index.html
@@ -2,201 +2,53 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>T.C. Kimlik Doğrulama (PHP + SweetAlert2 Geliştirilmiş)</title>
+  <title>Ana Menü - T.C. Kimlik Doğrulama</title>
   <style>
-    /* Basit Stil */
     body {
       font-family: Arial, sans-serif;
       background: #f1f1f1;
       margin: 0; 
       padding: 0;
     }
-    .container {
+    .menu-container {
       max-width: 400px;
       margin: 5rem auto;
       background: #fff;
       padding: 2rem;
       border-radius: 8px;
+      text-align: center;
     }
     h1 {
-      text-align: center;
       margin-bottom: 1.5rem;
     }
-    label {
-      font-weight: bold;
-    }
-    input {
-      width: 100%;
-      margin-bottom: 1rem;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 0.6rem 1rem;
+    .menu-btn {
+      display: inline-block;
+      margin: 1rem;
+      padding: 1rem 2rem;
+      border: none;
       background: #008CBA;
       color: #fff;
-      border: none;
-      cursor: pointer;
+      text-decoration: none;
+      font-size: 1rem;
       border-radius: 4px;
+      cursor: pointer;
     }
-    button:hover {
+    .menu-btn:hover {
       background: #006f8b;
     }
-    #result {
-      margin-top: 1rem;
-      font-weight: bold;
-      text-align: center;
-    }
   </style>
-
-  <!-- SweetAlert2 CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-<div class="container">
-  <h1>T.C. Kimlik Doğrulama</h1>
+
+<div class="menu-container">
+  <h1>T.C. Kimlik Doğrulama Sistemi</h1>
   
-  <label for="tcNo">T.C. Kimlik Numarası:</label>
-  <input type="text" id="tcNo" placeholder="12345678901" required>
+  <!-- Tekil sorguya yönlendiriyoruz -->
+  <a href="tekilSorgu.html" class="menu-btn">Tekil Sorgu</a>
 
-  <label for="ad">Ad:</label>
-  <input type="text" id="ad" placeholder="Örnek" required>
-
-  <label for="soyad">Soyad:</label>
-  <input type="text" id="soyad" placeholder="Kullanıcı" required>
-
-  <label for="dogumYili">Doğum Yılı:</label>
-  <input type="number" id="dogumYili" placeholder="1990" required>
-
-  <button type="button" onclick="dogrula()">Doğrula</button>
-  
-  <!-- Eğer isterseniz sonuçları yazdırmak için -->
-  <div id="result"></div>
+  <!-- Toplu sorguya yönlendiriyoruz -->
+  <a href="topluSorgu.html" class="menu-btn">Toplu Sorgu</a>
 </div>
 
-<script>
-function dogrula() {
-  const tcNo = document.getElementById('tcNo').value.trim();
-  const ad = document.getElementById('ad').value.trim();
-  const soyad = document.getElementById('soyad').value.trim();
-  const dogumYili = document.getElementById('dogumYili').value.trim();
-
-  // Boş alan var mı?
-  if (!tcNo || !ad || !soyad || !dogumYili) {
-    Swal.fire({
-      icon: 'warning',
-      title: 'Uyarı',
-      text: 'Lütfen tüm alanları doldurunuz!',
-      confirmButtonText: 'Tamam'
-    });
-    return;
-  }
-
-  // T.C. Kimlik Numarası Validasyonu: 11 haneli, sadece rakam
-  const tcRegex = /^[0-9]{11}$/;
-  if (!tcRegex.test(tcNo)) {
-    Swal.fire({
-      icon: 'error',
-      title: 'Geçersiz T.C. Kimlik',
-      text: 'Lütfen 11 haneli, sadece rakamlardan oluşan bir TC Kimlik No girin!',
-      confirmButtonText: 'Tamam'
-    });
-    return;
-  }
-
-  // SweetAlert ile "loading" göster
-  Swal.fire({
-    title: 'Lütfen bekleyin',
-    text: 'Doğrulama işlemi yapılıyor...',
-    allowOutsideClick: false,
-    didOpen: () => {
-      Swal.showLoading();
-    }
-  });
-
-  // Sunucuya göndereceğimiz POST verisi
-  const postData = { tcNo, ad, soyad, dogumYili };
-
-  fetch("dogrula.php", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(postData)
-  })
-  .then(response => {
-    if (!response.ok) {
-      throw new Error("Sunucu hatası: " + response.status);
-    }
-    return response.json();
-  })
-  .then(data => {
-    // Loading popup'ını kapat
-    Swal.close();
-
-    if (data.error) {
-      // Sunucu tarafında veya cURL'de bir hata döndüyse
-      Swal.fire({
-        icon: 'error',
-        title: 'Hata',
-        text: data.error,
-        confirmButtonText: 'Tamam'
-      });
-      document.getElementById("result").textContent = "";
-      return;
-    }
-
-    // data.sonuc true/false/null dönebilir
-    if (data.sonuc === "true") {
-      // Doğrulama başarılı
-      Swal.fire({
-        icon: 'success',
-        title: 'Doğrulama Başarılı!',
-        html: `
-          <table style="margin:0 auto; border-collapse:collapse;">
-            <tr><td style="padding:4px;"><strong>T.C. Kimlik</strong></td><td style="padding:4px;">${tcNo}</td></tr>
-            <tr><td style="padding:4px;"><strong>Ad</strong></td><td style="padding:4px;">${ad}</td></tr>
-            <tr><td style="padding:4px;"><strong>Soyad</strong></td><td style="padding:4px;">${soyad}</td></tr>
-            <tr><td style="padding:4px;"><strong>Doğum Yılı</strong></td><td style="padding:4px;">${dogumYili}</td></tr>
-          </table>
-        `,
-        confirmButtonText: 'Tamam'
-      });
-      document.getElementById("result").textContent = "T.C. Kimlik bilgisi DOĞRULANDI (SweetAlert2 ile gösterildi).";
-      document.getElementById("result").style.color = "green";
-    }
-    else if (data.sonuc === "false") {
-      // Kimlik geçersiz veya doğrulanamadı
-      Swal.fire({
-        icon: 'warning',
-        title: 'Kimlik bilgisi doğrulanamadı',
-        confirmButtonText: 'Tamam'
-      });
-      document.getElementById("result").textContent = "Kimlik bilgisi doğrulanamadı.";
-      document.getElementById("result").style.color = "red";
-    }
-    else {
-      // Beklenmeyen durum
-      Swal.fire({
-        icon: 'info',
-        title: 'Bilinmeyen Durum',
-        text: 'Yanıt anlaşılamadı veya hata oluştu.',
-        confirmButtonText: 'Tamam'
-      });
-      document.getElementById("result").textContent = "Yanıt anlaşılamadı veya hata.";
-      document.getElementById("result").style.color = "orange";
-    }
-  })
-  .catch(err => {
-    // Fetch veya ağ hatası
-    Swal.close(); // Loading'i kapatmayı unutmayalım
-    Swal.fire({
-      icon: 'error',
-      title: 'İstek Hatası',
-      text: err.message,
-      confirmButtonText: 'Tamam'
-    });
-  });
-}
-</script>
 </body>
 </html>
